# quadric_initialization

./: CMakeLists.txt  README.md
include/LfD/: bbs_detect.hpp  estimate_ellipsoids.hpp  helpers.hpp  viewer.hpp
src/: bbs_detect.cpp  estimate_ellipsoids.cpp  ppf_helpers.cpp  ppf_match.cpp  t_hash_int.cpp  test.cpp  viewer.cpp
